# next-fastapi-starter

./: .gitignore  .lintstagedrc.json  .prettierrc.mjs  README.md  package.json  pnpm-lock.yaml  turbo.json
.husky/: pre-commit
apps/api/: .gitignore  package.json  pyproject.toml  run.py
apps/api/src/: config.py  main.py
apps/api/src/api/v1/: api.py
apps/api/src/api/v1/endpoints/: health.py
apps/api/tests/: test_api.py
apps/docs/: .gitignore  package.json
apps/web/: coverage.json  next.config.js  package.json  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/tests/: page.test.tsx
