[project]
name = "api"
version = "0.1.0"
description = ""
authors = [{ name = "Penley Chan", email = "penleychan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi (>=0.109.2,<1.0.0)",
  "uvicorn (>=0.27.1,<1.0.0)",
  "email-validator (>=2.1.0,<3.0.0)",
  "pydantic-settings (>=2.2.1,<3.0.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.6.0"
pytest = "^8.0.1"
pylint-pydantic = "^0.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
